Fix dark mode hover

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -138,6 +138,13 @@
   background-color: #cccccc;
 
 }
+@media (prefers-color-scheme: dark) {
+  .link_card:hover {
+    cursor: pointer;
+    background-color: #424242;
+  
+  }
+}
 
 .link{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
